[package]
name = "sleepy_apple"
version = "0.1.0"
edition = "2024"

[dependencies]
core-graphics = "0.25.0"
core-foundation = "0.10.1"
tracing-subscriber = "0.3.22"
tracing = "0.1.44"

[package.metadata.bundle]
name = "Sleepy Apple"
identifier = "me.dainiusr.sleepyapple"
background_only = true
osx_info_plist_exts = ["extra.plist"]


